--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="header-mobile">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="logo">
-                    <img src="./assets/img/Grupo 157.svg">
+                    <img src="./assets/img/logo-branca.svg">
                 </div>
                 <div class="menu-mobile">
                     <div class="menu-mobile-fechado">
