--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </header>
 
     <div id="banner">
+        <div class="sombra"></div>
         <div class="container-fluid interno">
             <p>Simples.</p>
             <p>Sofisticado.</p>
